--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,20 @@
-version: "2"
+version: '3'
 services:
   zookeeper:
-    image: confluent/zookeeper:latest
-    restart: always
-    hostname: zookeeper
+   image: dock.gaikai.org/qnib/plain-zookeeper:latest-rev9
+   ports:
+     - "2181:2181"
+  zkui:
+    image: qnib/plain-zkui
     ports:
-      - "2181:2181"
+      - "9090:9090"
     environment:
-      zk_id: "1"
+      ZK_SERVER: "zookeeper:2181"
+  broker:
+    image: dock.gaikai.org/qnib/plain-kafka:latest-rev11
+    ports:
+     - "9092:9092"
+    environment:
+      ADVERTISED_LISTENERS: "localhost:9092"
+      ZK_SERVERS: "zookeeper"
 
-  kafka:
-    hostname: kafka
-    restart: always
-    image: confluentinc/cp-kafka:latest
-    depends_on:
-      - zookeeper
-    restart: always
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka:9092"
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-    volumes:
-      - /tmp/docker/kafka1/logs:/logs
-      - /tmp/docker/kafka1/data:/data
